# poetry_docker

./: Dockerfile  pyproject.toml
tests/: test_this.py
